@@ -2,6 +2,5 @@ require 'openssl'
 
 require 'xmldsig.so'
 
-require 'xmldsig/document'
 require 'xmldsig/signature'
 
